# x402-near-facilitator

./: .dockerignore  .env.example  .gitattributes  .gitignore  .redocly.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  NEAR-INTENTS-X402-PROGRESS.md  NOTICE  README.md  SECURITY.md  deny.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  fuzz.yml  release.yml
conformance/http-client/: check.mjs  package-lock.json  package.json
crates/x402-chain-near/: Cargo.toml
crates/x402-chain-near/fixtures/: generate.mjs  package-lock.json  package.json  signed-delegates.json
crates/x402-chain-near/src/: lib.rs  mechanism.rs  provider.rs  receipt.rs  rpc.rs  tests.rs  types.rs
crates/x402-near-facilitator/: Cargo.toml
crates/x402-near-facilitator/src/: auth.rs  chain.rs  config.rs  leadership.rs  leadership_postgres_tests.rs  lib.rs  main.rs  protocol.rs  service.rs  service_http_tests.rs  service_recovery_tests.rs  store.rs  store_postgres_tests.rs  telemetry.rs
crates/x402-near-facilitator/tests/: admin_cli.rs
deploy/: install-release.sh  promote-release.sh
deploy/config/: mainnet.json.example  testnet.json.example
deploy/demo/: README.md  mainnet.env.example  testnet.env.example  x402-demo.conf  x402-demo@.service
deploy/demo/discovery/: mainnet-openapi.json  mainnet-well-known-x402.json  testnet-openapi.json  testnet-well-known-x402.json
deploy/logrotate/: x402-near-facilitator
deploy/monitoring/: README.md  certbot-onfailure.conf  x402-near-alert.sh  x402-near-alert@.service  x402-near-backup.service  x402-near-backup.sh  x402-near-backup.timer  x402-near-metrics.service  x402-near-metrics.sh  x402-near-metrics.timer
deploy/nginx/: x402-near-cloudflare-only.conf  x402-near-facilitator.conf  x402-near-proxy.conf
deploy/systemd/: x402-near-facilitator@.service
docs/: api-keys.md  architecture.md  configuration.md  distribution.md  evm-v2-design.md  launch-checklist.md  near-intents-adoption-gates.md  near-intents-sibling-design.md  near-intents-x402-progress.md  openapi.yaml  runbook.md  threat-model.md
docs/evidence/: 2026-07-19-relayer-provisioning.md  2026-07-22-ec2-host-and-dns-repoint.md  2026-07-22-launch-dns.md  2026-07-23-mainnet-golive.md  2026-07-23-operational-hardening.md  2026-07-23-real-traffic-and-recovery.md  2026-07-23-testnet-golive.md  2026-07-23-v013-rollback-and-alerting.md  2026-07-24-rpc-resilience-and-host-verification.md
examples/resource-server/: README.md  check-imports.mjs  index.mjs  journal.mjs  journal.test.mjs  package-lock.json  package.json
fuzz/: Cargo.toml
fuzz/corpus/decode_ft_transfer_args/: valid_transfer.json
fuzz/corpus/decode_signed_delegate/: ed25519  secp256k1
fuzz/corpus/parse_http_request/: valid-shape.json
fuzz/fuzz_targets/: decode_ft_transfer_args.rs  decode_signed_delegate.rs  parse_http_request.rs
migrations/: 0001_initial.sql  0002_multichain.sql
scripts/: check-docs.py  check.sh  release_guard.py  test-install-release.sh  test_release_guard.py  verify-deployment.sh
