[package]
name = "x402-chain-near"
description = "NEAR exact-payment facilitator mechanism for x402"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
base64.workspace = true
borsh.workspace = true
near-crypto.workspace = true
near-jsonrpc-client.workspace = true
near-jsonrpc-primitives.workspace = true
near-primitives.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
x402-types.workspace = true

[lints]
workspace = true
