[package]
name = "x402-near-facilitator"
description = "Production NEAR x402 facilitator service"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "x402_near_facilitator"
path = "src/lib.rs"

[[bin]]
name = "x402-near-facilitator"
path = "src/main.rs"

[[bin]]
name = "x402-near-admin"
path = "src/bin/admin.rs"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
hex.workspace = true
hmac.workspace = true
http.workspace = true
near-crypto.workspace = true
near-primitives.workspace = true
opentelemetry = { version = "0.32", features = ["metrics", "trace"] }
opentelemetry-otlp = { version = "0.32", default-features = false, features = ["http-proto", "metrics", "reqwest-rustls", "trace"] }
opentelemetry_sdk = { version = "0.32", features = ["metrics", "trace"] }
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
subtle.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "net"] }
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-opentelemetry = "0.33"
tracing-subscriber.workspace = true
url.workspace = true
uuid.workspace = true
x402-chain-near = { version = "=0.2.0", path = "../x402-chain-near" }
x402-facilitator-local.workspace = true
x402-types.workspace = true
zeroize.workspace = true

[dev-dependencies]
http-body-util = "0.1"

[lints]
workspace = true
